--- a/DI-App/CalendarVC/CalendarVC.xib
+++ b/DI-App/CalendarVC/CalendarVC.xib
@@ -14,6 +14,8 @@
             <connections>
                 <outlet property="SideMenuButton" destination="aFD-n9-JEc" id="HVg-mP-8bN"/>
                 <outlet property="mainView" destination="iN0-l3-epB" id="tVy-BE-jZq"/>
+                <outlet property="tableView" destination="Pp6-Wl-mVj" id="4fe-Od-PSa"/>
+                <outlet property="userCalendar" destination="ChP-wa-Y94" id="u18-ur-Iu1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
