--- a/DI-App/login/Login.xib
+++ b/DI-App/login/Login.xib
@@ -26,37 +26,28 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIGN-IN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyt-Eo-S2u">
-                    <rect key="frame" x="105" y="100" width="165" height="54"/>
+                    <rect key="frame" x="105" y="60" width="165" height="54"/>
                     <fontDescription key="fontDescription" type="system" pointSize="45"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember me ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLs-TR-hhm">
-                    <rect key="frame" x="73" y="466" width="124.5" height="20.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember me !" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLs-TR-hhm">
+                    <rect key="frame" x="45" y="480" width="124.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhp-op-0lo">
-                    <rect key="frame" x="45" y="543" width="285" height="64"/>
-                    <color key="backgroundColor" red="0.0" green="0.17346887143782383" blue="0.69387548575129532" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="43"/>
-                    <state key="normal" title="SIGN-IN">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhp-op-0lo">
+                    <rect key="frame" x="45" y="557" width="286" height="50"/>
+                    <state key="normal" image="Big Button">
                         <color key="titleColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
                         <action selector="SignIN:" destination="-1" eventType="touchUpInside" id="xbP-lK-LsC"/>
                     </connections>
                 </button>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CR9-uF-O2v">
-                    <rect key="frame" x="45" y="224" width="288" height="29"/>
-                    <segments>
-                        <segment title="Login"/>
-                        <segment title="Register"/>
-                    </segments>
-                </segmentedControl>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="HwG-x3-Sme">
-                    <rect key="frame" x="16" y="288" width="343" height="150"/>
+                    <rect key="frame" x="16" y="302" width="343" height="150"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A5S-Wu-PuD">
                             <rect key="frame" x="0.0" y="0.0" width="343" height="34"/>
@@ -79,7 +70,7 @@
                     </subviews>
                 </stackView>
                 <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzO-7I-syL">
-                    <rect key="frame" x="16" y="466" width="20" height="20"/>
+                    <rect key="frame" x="16" y="480" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="VLl-7s-Xbe"/>
                         <constraint firstAttribute="height" constant="20" id="jpN-Kt-51A"/>
@@ -93,7 +84,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="byQ-ne-OoK" customClass="CustomSegmentedControl" customModule="DI_App" customModuleProvider="target">
-                    <rect key="frame" x="45" y="171" width="288" height="36"/>
+                    <rect key="frame" x="42" y="156" width="288" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <userDefinedRuntimeAttributes>
@@ -103,27 +94,33 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                             <real key="value" value="1"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="string" keyPath="commaSeperatedButtonTitles" value="Login, Register"/>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CR9-uF-O2v">
+                    <rect key="frame" x="43" y="203" width="288" height="29"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <segments>
+                        <segment title="Login"/>
+                        <segment title="Register"/>
+                    </segments>
+                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="HwG-x3-Sme" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="0yp-qm-xkx"/>
-                <constraint firstItem="CR9-uF-O2v" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="4CA-wk-AiH"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zhp-op-0lo" secondAttribute="trailing" constant="45" id="4hz-Pa-sbE"/>
-                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="37" id="8hI-kQ-uIH"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zhp-op-0lo" secondAttribute="trailing" constant="44" id="4hz-Pa-sbE"/>
+                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="9" id="8hI-kQ-uIH"/>
                 <constraint firstItem="FzO-7I-syL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="8xP-Yw-8h7"/>
                 <constraint firstItem="jyt-Eo-S2u" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="105" id="GC6-s1-N1c"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CR9-uF-O2v" secondAttribute="trailing" constant="42" id="GM9-im-wTk"/>
                 <constraint firstItem="FzO-7I-syL" firstAttribute="top" secondItem="HwG-x3-Sme" secondAttribute="bottom" constant="28" id="JNb-qx-p40"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="HwG-x3-Sme" secondAttribute="trailing" constant="16" id="Pry-PV-awr"/>
-                <constraint firstItem="HwG-x3-Sme" firstAttribute="top" secondItem="CR9-uF-O2v" secondAttribute="bottom" constant="36" id="Y69-mg-Fp1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jyt-Eo-S2u" secondAttribute="trailing" constant="105" id="apu-WZ-Jvo"/>
-                <constraint firstItem="CR9-uF-O2v" firstAttribute="top" secondItem="jyt-Eo-S2u" secondAttribute="bottom" constant="70" id="bFI-OE-0U7"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RLs-TR-hhm" secondAttribute="trailing" constant="177.5" id="bIx-PY-NUZ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RLs-TR-hhm" secondAttribute="trailing" constant="205.5" id="bIx-PY-NUZ"/>
                 <constraint firstItem="RLs-TR-hhm" firstAttribute="top" secondItem="HwG-x3-Sme" secondAttribute="bottom" constant="28" id="cdA-vX-CZ5"/>
-                <constraint firstItem="jyt-Eo-S2u" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="80" id="gqC-QB-mvD"/>
-                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="37" id="kj4-hv-dVE"/>
+                <constraint firstItem="jyt-Eo-S2u" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="gqC-QB-mvD"/>
+                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="9" id="kj4-hv-dVE"/>
                 <constraint firstItem="Zhp-op-0lo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="sCH-Ws-0Go"/>
                 <constraint firstItem="Zhp-op-0lo" firstAttribute="top" secondItem="RLs-TR-hhm" secondAttribute="bottom" constant="56.5" id="xjW-m7-40w"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Zhp-op-0lo" secondAttribute="bottom" constant="60" id="z8e-hW-6fx"/>
@@ -132,4 +129,7 @@
             <point key="canvasLocation" x="136.5" y="54.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="Big Button" width="295" height="50"/>
+    </resources>
 </document>
