--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KkT-bp-gB2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Landpage-->
+        <scene sceneID="by2-aL-5dG">
+            <objects>
+                <viewController id="KkT-bp-gB2" customClass="Landpage" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UrY-nX-TIc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="IE8-hw-5Uj"/>
+                    </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="IsNotConnected" id="BIl-qk-Aq2"/>
+                        <segue destination="xNH-ZW-mhg" kind="show" identifier="isConnected" id="Du0-oG-tFI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yme-Sw-Pcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1255" y="-408"/>
+        </scene>
         <!--Login-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -21,13 +40,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <segue destination="xNH-ZW-mhg" kind="show" identifier="FirstSignIN" id="M8k-gf-WG6"/>
-                        <segue destination="xNH-ZW-mhg" kind="show" identifier="rememberMeON" id="2he-eQ-e5O"/>
+                        <segue destination="xNH-ZW-mhg" kind="show" identifier="firstSignIn" id="QW4-je-6gZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-887" y="134"/>
+            <point key="canvasLocation" x="-1255" y="403"/>
         </scene>
         <!--HandBook-->
         <scene sceneID="gQ4-Ba-Trg">
@@ -44,6 +62,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z5A-tD-2m0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2414" y="-555"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Olh-Te-X4o">
+            <objects>
+                <viewController id="U4q-vh-qTn" customClass="Classes" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rjb-3m-fbh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="iYq-ZJ-pvb"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="4Dy-4V-y9z"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F8B-50-2EY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2371" y="-2141"/>
         </scene>
         <!--Calendar-->
         <scene sceneID="mgO-Z9-S7q">
@@ -161,6 +195,7 @@
                         <segue destination="q8Y-bH-Lbc" kind="relationship" relationship="viewControllers" id="vPY-o5-vPh"/>
                         <segue destination="bpu-l0-hzM" kind="relationship" relationship="viewControllers" id="NUW-ka-Q47"/>
                         <segue destination="BUF-LW-yI5" kind="relationship" relationship="viewControllers" id="pBh-jH-MV5"/>
+                        <segue destination="U4q-vh-qTn" kind="relationship" relationship="viewControllers" id="kSj-MT-45H"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Dt-OY-BOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -207,6 +242,6 @@
         <image name="icons8-ereader-100" width="33" height="33"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="M8k-gf-WG6"/>
+        <segue reference="Du0-oG-tFI"/>
     </inferredMetricsTieBreakers>
 </document>
