Initial commit for branch ethanSearch

--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
         <!--Item 2-->
         <scene sceneID="gQ4-Ba-Trg">
             <objects>
-                <viewController id="q8Y-bH-Lbc" sceneMemberID="viewController">
+                <viewController id="q8Y-bH-Lbc" customClass="CoursesTVC" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BvA-uE-gie">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
